# tally-tracker

./: .gitignore  .pre-commit-config.yaml  .trivyignore  .trivyignore-caddy  README.md
.claude/skills/run-tally/: SKILL.md  driver.mjs  gen-env.sh  package-lock.json  package.json  stack.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202607030001_baseline.py  202607031200_m1_auth_household.py  202607031800_m2_core_entities.py  202607041000_m3_import_pipeline.py  202607041500_m4_bills_debts_goals.py  202607041600_m4_balance_snapshots.py  202607051000_m5_last_login_at.py  202607060900_csv_import_fixes.py  202607070900_debt_color_icon.py  202607080900_board_gamification.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: accounts.py  auth.py  balance_snapshots.py  bills.py  board.py  categories.py  debts.py  goals.py  health.py  household.py  import_profiles.py  imports.py  invites.py  monthly_close.py  rules.py  setup.py  transactions.py
backend/app/core/: config.py  limiter.py  redis.py  security.py
backend/app/jobs/: balance_snapshot.py
backend/app/models/: account.py  audit_log.py  balance_snapshot.py  base.py  bill.py  bill_payment.py  category.py  checkin.py  debt.py  financial_year_board.py  goal.py  goal_contribution.py  household.py  household_member.py  import_batch.py  import_profile.py  invite.py  monthly_close.py  rule.py  streak.py  transaction.py  trophy.py  user.py
backend/app/schemas/: accounts.py  auth.py  balance_snapshots.py  bills.py  board.py  categories.py  debts.py  goals.py  import_profiles.py  imports.py  monthly_close.py  rules.py  transactions.py
backend/app/services/: accounts.py  audit.py  auth.py  balance_snapshots.py  bank_formats.py  bill_payments.py  bills.py  board.py  builtin_categorization.py  categories.py  csv_safety.py  debts.py  goal_contributions.py  goals.py  household.py  import_parsing.py  import_profiles.py  import_sessions.py  imports.py  invites.py  monthly_close.py  rules.py  transactions.py  trophies.py
backend/tests/: conftest.py  test_accounts.py  test_auth.py  test_balance_snapshot.py  test_bank_format_detection.py  test_bill_payments.py  test_bills.py  test_board.py  test_board_mechanics.py  test_categories.py  test_csv_safety.py  test_debts.py  test_goals.py  test_health.py  test_household_isolation.py  test_import_batches.py  test_import_parsing.py  test_import_profiles.py  test_imports_dedupe.py  test_imports_upload.py  test_invites.py  test_monthly_close.py  test_rules.py  test_setup.py  test_transactions.py
backend/tests/fixtures/: chase_sample.csv  wells_fargo_sample.csv
deploy/: .env.example  Caddyfile  Dockerfile.caddy  README.md  docker-compose.yml
docs/: TALLY_BUILD_SPEC.md  product-principles.md  spec.md
docs/adr/: 0001-record-architecture-decisions.md  0002-tooling-choices.md  0003-trivy-exceptions.md  0004-trivy-caddy-exceptions.md  0005-users-vs-household-members-source-of-truth.md
frontend/: .dockerignore  .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
frontend/public/: theme-init.js
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
frontend/src/components/: AuthCard.tsx  AuthenticatedShell.tsx  Card.tsx  EmptyState.tsx  ErrorBanner.tsx  FormField.tsx  MobileBottomNav.tsx  MobileMoreSheet.tsx  MoneyDisplay.tsx  PageSpinner.tsx  PrimaryButton.tsx  ProgressBar.tsx  PropertyCard.tsx  RowActionLink.tsx  SecondaryButton.tsx  SelectField.tsx  fieldChrome.ts
frontend/src/design-system/: ThemeProvider.tsx  tokens.ts  useIsMobile.ts  useReducedMotion.ts  useTheme.ts
frontend/src/lib/: api.ts  errors.ts  (+3 more)
(+70 files in other folders)
