[project]
name = "tally-api"
version = "0.1.0"
description = "Tally household finance tracker — API"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.30,<1.0",
    "alembic>=1.13,<2.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.5,<3.0",
    "uuid6>=2024.7.10",
]

[dependency-groups]
dev = [
    "ruff>=0.7,<1.0",
    "mypy>=1.11,<2.0",
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-cov>=5.0,<6.0",
    "httpx>=0.27,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "uuid6.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app/services", "app/jobs"]

[tool.coverage.report]
# Gate scoped to services/import-pipeline code per spec §7; those packages are
# still empty in M0, so this is wired but not yet meaningfully enforced (see
# docs/adr and the M3 milestone where real service logic lands).
fail_under = 0
