[project]
name = "tally-api"
version = "0.1.0"
description = "Tally household finance tracker — API"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.30,<1.0",
    "alembic>=1.13,<2.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.5,<3.0",
    "uuid6>=2024.7.10",
    "argon2-cffi>=23.1,<26.0",
    "slowapi>=0.1.9,<0.2",
    "redis>=5.0,<9.0",
    "email-validator>=2.2,<3.0",
    "python-multipart>=0.0.12,<0.1",
    "charset-normalizer>=3.4,<4.0",
    "regex>=2024.11.6,<2027.0",
    "python-dateutil>=2.9,<3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7,<1.0",
    "mypy>=1.11,<3.0",
    "pytest>=8.3,<10.0",
    "pytest-asyncio>=0.24,<2.0",
    "pytest-cov>=5.0,<8.0",
    "httpx>=0.27,<1.0",
    "fakeredis>=2.24,<3.0",
    "hypothesis>=6.112,<7.0",
    "types-regex>=2024.11.6.20241221",
    "types-python-dateutil>=2.9,<3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "uuid6.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "slowapi.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fakeredis.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app/services", "app/jobs"]
# SQLAlchemy's async engine bridges via greenlet internally; without this,
# coverage.py's tracer misses statements executed on the greenlet-switched
# stack (i.e. most of anything that awaits a db.execute()/db.commit()).
concurrency = ["greenlet"]

[tool.coverage.report]
# Gate scoped to services/import-pipeline code per spec §7. M1 (auth/household)
# is the first milestone with real app/services/ code, so the gate is now
# meaningfully enforced (see docs/adr/0005).
fail_under = 80
